package com.bitcoooonnect.dynamodb;

public class CoinDao {
}
