@startuml
class Coin {
- id : String
- name : String
- price : Double
}

class User {
- authToken : String
- name : String
- coins : ArrayList
}

class CoinDao {
- dynamoDBMapper : DynamoDBMapper
}

class CoinGeckoAPIClient {

}

class UserDao {
- dynamoDBMapper : DynamoDBMapper
}

class CreateUserActivity {

}

class UpdateUserActivity {

}

class GetUserActivity {

}

UserDao --o UpdateUserActivity
UserDao --o CreateUserActivity
UserDao --o GetUserActivity

@enduml